--- a/style/businessOffers.css
+++ b/style/businessOffers.css
@@ -71,3 +71,10 @@
 .hidden {
   display: none;
 }
+.logo-img {
+  width: 100%;
+  height: auto;
+  max-height: 120px;
+  object-fit: contain;
+  margin-bottom: 10px;
+}
